Add hierarchy categories support with LTREE and filter_lib (#28)
* Add category hierarchy response (#5)
