# taxonomy/app/schemas/__init__.py
@@ -1,0 +1,31 @@
+from app.schemas.errors import (
+    BadRequestErrorSchema,
+    ConnectionErrorSchema,
+    NotFoundErrorSchema,
+)
+from app.schemas.taxon import (
+    TaxonBaseSchema,
+    TaxonInputSchema,
+    TaxonResponseSchema,
+)
+from app.schemas.taxonomy import (
+    CategoryLinkSchema,
+    JobIdSchema,
+    TaxonomyBaseSchema,
+    TaxonomyInputSchema,
+    TaxonomyResponseSchema,
+)
+
+__all__ = [
+    BadRequestErrorSchema,
+    ConnectionErrorSchema,
+    NotFoundErrorSchema,
+    TaxonBaseSchema,
+    TaxonInputSchema,
+    TaxonResponseSchema,
+    CategoryLinkSchema,
+    JobIdSchema,
+    TaxonomyBaseSchema,
+    TaxonomyInputSchema,
+    TaxonomyResponseSchema,
+]
